--- a/source/css/_partial/customise/social-icon.styl
+++ b/source/css/_partial/customise/social-icon.styl
@@ -44,9 +44,14 @@
             background-size i[2] + "%"
 
     .GitHub
-        background url(//cdn.bootcss.com/logos/0.2.0/github-octocat.svg) no-repeat white
+        background url(root-url +'/img/github.png') no-repeat white
         background-size 90%
         background-position 50% 100%
+
+    .Steam
+        background url(root-url +'/img/steam.png') no-repeat white
+        background-size 120%
+        background-position 50% 65%
 
     .CodePen
         background url(//cdn.bootcss.com/logos/0.2.0/codepen-icon.svg) no-repeat black
