--- a/layout/_partial/comments/gitalk.ejs
+++ b/layout/_partial/comments/gitalk.ejs
@@ -8,7 +8,7 @@
                 clientID:  '<%= theme.gitalk.clientID %>',
                 clientSecret: '<%= theme.gitalk.clientSecret %>',
                 repo: '<%= theme.gitalk.repo %>',
-                id: window.location.pathname,
+                id: '<%= page.date %>',
                 owner: '<%= theme.gitalk.owner %>',
                 admin: '<%= theme.gitalk.admin %>',
                 distractionFreeMode: '<%= theme.gitalk.distractionFreeMode %>'
